加入註冊、重設密碼畫面

--- a/task03_0606/Views/_Member_LayoutPage1.cshtml
+++ b/task03_0606/Views/_Member_LayoutPage1.cshtml
@@ -10,6 +10,8 @@
     <script src="/js/jquery-3.2.1.slim.min.js"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery.twzipcode.min.js"></script>
+    <script src="/js/yi.js"></script>
 </head>
 <body class="bg-dark">
     <div>
