--- a/task03_0606/Views/Member/Login.cshtml
+++ b/task03_0606/Views/Member/Login.cshtml
@@ -4,12 +4,12 @@
     Layout = "~/Views/_Member_LayoutPage1.cshtml";
 }
 
-<h2>Login</h2>
+<h2>會員登入</h2>
 <div class="container custom-container-width">
     <div class="card card-login mx-auto mt-5">
         <div class="card-header">登入</div>
         <div class="card-body">
-            <form>
+            <form method="post" action="">
                 <div class="form-group">
                     <label for="exampleInputEmail1">電子信箱：</label>
                     <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="請輸入信箱...">
@@ -25,11 +25,12 @@
                         </label>
                     </div>
                 </div>
-                <a class="btn btn-primary btn-block" href="index.html">登入</a>
+                @*<a class="btn btn-primary btn-block" href="index.html">登入</a>*@
+                <button type="submit" class="btn btn-primary btn-block">登入</button>
             </form>
             <div class="text-center">
-                <a class="d-block small mt-3" href="register.html">註冊帳號</a>
-                <a class="d-block small" href="forgot-password.html">忘記密碼?</a>
+                <a class="d-block small mt-3" href="/Member/Register">註冊帳號</a>
+                <a class="d-block small" href="/Member/ForgotPassword">忘記密碼?</a>
             </div>
         </div>
     </div>
