登出登入功能

--- a/task03_0606/Views/_Member_Home_LayoutPage1.cshtml
+++ b/task03_0606/Views/_Member_Home_LayoutPage1.cshtml
@@ -22,14 +22,14 @@
 </head>
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-        <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+        <a class="navbar-brand" href="/Member/Member">Start Bootstrap</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-                    <a class="nav-link" href="index.html">
+                    <a class="nav-link" href="/Member/Member">
                         <i class="fa fa-fw fa-dashboard"></i>
                         <span class="nav-link-text">儀錶板</span>
                     </a>
@@ -37,13 +37,13 @@
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
                     <a class="nav-link" href="charts.html">
                         <i class="fa fa-fw fa-area-chart"></i>
-                        <span class="nav-link-text">Charts</span>
+                        <span class="nav-link-text">統計圖</span>
                     </a>
                 </li>
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
                     <a class="nav-link" href="tables.html">
                         <i class="fa fa-fw fa-table"></i>
-                        <span class="nav-link-text">Tables</span>
+                        <span class="nav-link-text">表格</span>
                     </a>
                 </li>
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
@@ -67,13 +67,13 @@
                     </a>
                     <ul class="sidenav-second-level collapse" id="collapseExamplePages">
                         <li>
-                            <a href="login.html">Login Page</a>
+                            <a href="/Member/Login">登入</a>
                         </li>
                         <li>
-                            <a href="register.html">Registration Page</a>
+                            <a href="/Member/Register">註冊新帳號</a>
                         </li>
                         <li>
-                            <a href="forgot-password.html">Forgot Password Page</a>
+                            <a href="/Member/ForgotPassword">忘記密碼</a>
                         </li>
                         <li>
                             <a href="blank.html">Blank Page</a>
@@ -211,7 +211,7 @@
                 <li class="nav-item">
                     <form class="form-inline my-2 my-lg-0 mr-lg-2">
                         <div class="input-group">
-                            <input class="form-control" type="text" placeholder="Search for...">
+                            <input class="form-control" type="text" placeholder="搜尋...">
                             <span class="input-group-append">
                                 <button class="btn btn-primary" type="button">
                                     <i class="fa fa-search"></i>
@@ -221,9 +221,25 @@
                     </form>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
-                        <i class="fa fa-fw fa-sign-out"></i>Logout
-                    </a>
+
+                    @{ 
+                        string strUrl = "";
+                        string faStr = "out";
+                        string logStr = "登出";
+                        string toggleStr = "modal";
+                        string targetStr = "#exampleModal";
+                        if (String.IsNullOrEmpty((string)Session["logState"])) {
+                            strUrl = "/Member/Login";
+                            faStr = "in";
+                            logStr = "登入";
+                            toggleStr = "";
+                            targetStr = "";
+                        }
+                        <a class="nav-link" href="@strUrl" data-toggle="@toggleStr" data-target="@targetStr">
+                            <i class="fa fa-fw fa-sign-@faStr"></i>@logStr
+                        </a>
+                    }
+
                 </li>
             </ul>
         </div>
