--- a/task03_0606/Views/Member/Login.cshtml
+++ b/task03_0606/Views/Member/Login.cshtml
@@ -12,11 +12,11 @@
             <form method="post" action="">
                 <div class="form-group">
                     <label for="exampleInputEmail1">電子信箱：</label>
-                    <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="請輸入信箱...">
+                    <input class="form-control" id="email" name="email" type="email" aria-describedby="emailHelp" placeholder="請輸入信箱...">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">密碼：</label>
-                    <input class="form-control" id="exampleInputPassword1" type="password" placeholder="請輸入密碼...">
+                    <input class="form-control" id="pwd" name="pwd" type="password" placeholder="請輸入密碼...">
                 </div>
                 <div class="form-group">
                     <div class="form-check">
