--- a/task03_0606/Views/Member/EditPersonalData.cshtml
+++ b/task03_0606/Views/Member/EditPersonalData.cshtml
@@ -1,14 +1,17 @@
 ﻿
 @{
-    ViewBag.Title = "Register";
-    Layout = "~/Views/_Member_LayoutPage1.cshtml";
+    string LayoutUrl = "~/Views/_Normal_Member_Home_LayoutPage1.cshtml";
+    if((string)Session["identity"] == "superUser" || (string)Session["identity"] == "storeUser") {
+        LayoutUrl = "~/Views/_Member_Home_LayoutPage1.cshtml";
+    }
+    ViewBag.Title = "EditPersonalData";
+    Layout = LayoutUrl;
 }
 
-<h2>註冊帳號</h2>
-
+<h2>編輯個人資料</h2>
 <div class="container custom-container-width">
     <div class="card card-register mx-auto mt-5">
-        <div class="card-header">註冊帳號</div>
+        <div class="card-header">修改個人資料</div>
         <div class="card-body">
             <form method="post" action="">
                 <div class="form-group">
@@ -31,17 +34,17 @@
                 <div class="form-group">
                     <div class="form-row">
                         <div class="col-md-6">
-                            <label for="Password1">密碼</label>
+                            <label for="Password1">新密碼</label>
                             <input class="form-control" id="Password1" type="password" placeholder="請輸入密碼...">
                         </div>
                         <div class="col-md-6">
-                            <label for="ConfirmPassword">確認密碼</label>
+                            <label for="ConfirmPassword">確認新密碼</label>
                             <input class="form-control" id="ConfirmPassword" type="password" placeholder="確認密碼...">
                         </div>
                     </div>
                 </div>
 
-            
+
                 <label for="Address">地址</label>
 
                 <div class="form-group" id="twzipcode">
@@ -58,14 +61,12 @@
                 </div>
 
                 @*<a class="btn btn-primary btn-block" href="login.html">註冊</a>*@
-                <button type="submit" class="btn btn-primary btn-block">註冊</button>
+                <button type="submit" class="btn btn-primary btn-block">修改</button>
             </form>
-            <div class="text-center">
-                <a class="d-block small mt-3" href="/Member/Login">登入</a>
-                <a class="d-block small" href="/Member/ForgotPassword">忘記密碼?</a>
-            </div>
+            
         </div>
     </div>
 </div>
 <script src="/js/jquery.twzipcode.min.js"></script>
 <script src="/js/yi.js"></script>
+
