首頁消費導覽 & 商家優惠

--- a/task03_0606/Views/Home/Restaurent.cshtml
+++ b/task03_0606/Views/Home/Restaurent.cshtml
@@ -11,11 +11,12 @@
 </ol>
 
 <div class="row">
+
     <div class="col-xl-3 col-sm-6 mb-3">
         <div class="card text-white bg-primary o-hidden h-100">
             <div class="card-body">
                 <h5 class="card-title"></h5>
-                <div class="card-body-icon">
+                <div class="card-body-icon ">
                     <img src="~/picture/1602181025050000001.jpg" title="麥當勞" />
                 </div>
                 @*<div class="mr-5">26 New Messages!</div>*@
@@ -155,6 +156,52 @@
         </div>
     </div>
 
+    <div class="col-xl-12 col-sm-12 mb-12">
+        <div class="card-header">
+            <i class="fa fa-table"></i> Data Table Example
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Position</th>
+                            <th>Office</th>
+                            <th>Age</th>
+                            <th>Start date</th>
+                            <th>Salary</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    
+                    <tbody>
+                        <tr>
+                            <td>Tiger Nixon</td>
+                            <td>System Architect</td>
+                            <td>Edinburgh</td>
+                            <td>61</td>
+                            <td>2011/04/25</td>
+                            <td>$320,800</td>
+                            <td>delete</td>
+                        </tr>
+                        <tr>
+                            <td>Garrett Winters</td>
+                            <td>Accountant</td>
+                            <td>Tokyo</td>
+                            <td>63</td>
+                            <td>2011/07/25</td>
+                            <td>$170,750</td>
+                            <td></td>
+                        </tr>
+                       
+                   
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+    </div>
 </div>
 
 
