--- a/task03_0606/Views/Shared/_Layout.cshtml
+++ b/task03_0606/Views/Shared/_Layout.cshtml
@@ -96,10 +96,6 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle mr-lg-2" id="messagesDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fa fa-fw fa-bell"></i>
-                        <span class="d-lg-none">
-                            Messages
-                            <span class="badge badge-pill badge-primary">12 New</span>
-                        </span>
                         <span class="indicator text-primary d-none d-lg-block">
                             <i class="fa fa-fw fa-circle">10</i>  @*新增筆數*@
                         </span>
@@ -115,25 +111,21 @@
                         </div>
 
                         @*<div class="dropdown-divider"></div>
-                        <div class="dropdown-item" href="#">
-                            <strong>David Miller</strong>
-                            <span class="small float-right text-muted">11:21 AM</span>
-                            <div class="dropdown-message small">Hey there! This new version of SB Admin is pretty awesome! These messages clip off when they reach the end of the box so they don't overflow over to the sides!</div>
-                        </div>*@
+                            <div class="dropdown-item" href="#">
+                                <strong>David Miller</strong>
+                                <span class="small float-right text-muted">11:21 AM</span>
+                                <div class="dropdown-message small">Hey there! This new version of SB Admin is pretty awesome! These messages clip off when they reach the end of the box so they don't overflow over to the sides!</div>
+                            </div>*@
 
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item small" href="#">View all messages</a>
                     </div>
-                </li>  
+                </li>
 
                 @*顧客專用-購物車訊息*@
-                <li class="nav-item dropdown"> 
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fa fa-fw fa-shopping-cart"></i>
-                        <span class="d-lg-none">
-                            Alerts
-                            <span class="badge badge-pill badge-warning">6 New</span>
-                        </span>
                         <span class="indicator text-warning d-none d-lg-block">
                             <i class="fa fa-fw fa-circle">20</i> @*購物筆數*@
                         </span>
@@ -179,9 +171,14 @@
 
 
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item small" href="#">View all alerts</a>
+                        <div class="dropdown-item small">
+                            <span>
+                                <a href="#">詳細購物明細</a>
+                                <a href="#" class="btn btn-sm btn-success pull-right"><i class="fa fa-fw fa-dollar"></i>結帳</a>
+                            </span>
+                        </div>
                     </div>
-                </li> 
+                </li>
 
                 @*搜尋列*@
                 <li class="nav-item">
@@ -198,9 +195,18 @@
                 </li>
                 @*網站登入/登出*@
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
-                        @*<i class="fa fa-fw fa-sign-out"></i>會員登出*@
-                        <i class="fa fa-fw fa-sign-in"></i>會員登入
+                    <a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#">
+                        @*<i class="fa fa-fw fa-sign-out"></i>登出*@
+                       
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#">
+                        <i class="fa fa-fw fa-sign-in"></i>登入
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#">
                         <i class="fa fa-fw fa-question"></i>忘記密碼
                     </a>
                 </li>
@@ -215,6 +221,19 @@
             @RenderBody()
 
         </div>
+        <!-- /.container-fluid-->
+        <!-- /.content-wrapper-->
+        <footer class="sticky-footer">
+            <div class="container">
+                <div class="text-center">
+                    <small>Copyright © Your Website 2018</small>
+                </div>
+            </div>
+        </footer>
+        <!-- Scroll to Top Button-->
+        <a class="scroll-to-top rounded" href="#page-top">
+            <i class="fa fa-angle-up"></i>
+        </a>
     </div>
 </body>
 </html>
@@ -232,3 +251,4 @@
 <!-- Custom scripts for this page-->
 <script src="~/startbootstrap-sb-admin-gh-pages/js/sb-admin-datatables.min.js"></script>
 <script src="~/startbootstrap-sb-admin-gh-pages/js/sb-admin-charts.min.js"></script>
+
