--- a/task03_0606/Views/Member/Login.cshtml
+++ b/task03_0606/Views/Member/Login.cshtml
@@ -16,7 +16,7 @@
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">密碼：</label>
-                    <input class="form-control" id="pwd" name="pwd" type="password" placeholder="請輸入密碼...">
+                    <input class="form-control" id="pwd" name="pwd" type="password" required="required" placeholder="請輸入密碼...">
                 </div>
                 <div class="form-group">
                     <div class="form-check">
