--- a/task03_0606/Views/Member/Register.cshtml
+++ b/task03_0606/Views/Member/Register.cshtml
@@ -16,32 +16,36 @@
 
                         <div class="col-md-6">
                             <label for="LastName">姓氏</label>
-                            <input class="form-control" id="LastName" type="text" aria-describedby="nameHelp" placeholder="請輸入姓氏...">
+                            <input class="form-control" id="LastName" type="text" required="required" aria-describedby="nameHelp" placeholder="請輸入姓氏...">
                         </div>
                         <div class="col-md-6">
                             <label for="FirstName">名稱</label>
-                            <input class="form-control" id="FirstName" type="text" aria-describedby="nameHelp" placeholder="請輸入名稱...">
+                            <input class="form-control" id="FirstName" type="text" required="required" aria-describedby="nameHelp" placeholder="請輸入名稱...">
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
+                    <label for="uid">身分證字號</label>
+                    <input class="form-control" id="uid" type="text" maxlength="10" required="required" aria-describedby="emailHelp" placeholder="請輸入身分證字號...">
+                </div>
+                <div class="form-group">
                     <label for="Email1">電子信箱</label>
-                    <input class="form-control" id="Email1" type="email" aria-describedby="emailHelp" placeholder="請輸入電子信箱...">
+                    <input class="form-control" id="Email1" type="email" required="required" aria-describedby="emailHelp" placeholder="請輸入電子信箱...">
                 </div>
                 <div class="form-group">
                     <div class="form-row">
                         <div class="col-md-6">
                             <label for="Password1">密碼</label>
-                            <input class="form-control" id="Password1" type="password" placeholder="請輸入密碼...">
+                            <input class="form-control" id="Password1" type="password" required="required" placeholder="請輸入密碼...">
                         </div>
                         <div class="col-md-6">
                             <label for="ConfirmPassword">確認密碼</label>
-                            <input class="form-control" id="ConfirmPassword" type="password" placeholder="確認密碼...">
+                            <input class="form-control" id="ConfirmPassword" type="password" required="required" placeholder="確認密碼...">
                         </div>
                     </div>
                 </div>
 
-            
+
                 <label for="Address">地址</label>
 
                 <div class="form-group" id="twzipcode">
@@ -54,7 +58,7 @@
 
                 </div>
                 <div class="form-group">
-                    <input class="form-control" id="Address" type="text" placeholder="">
+                    <input class="form-control" id="Address" type="text" required="required" placeholder="">
                 </div>
 
                 @*<a class="btn btn-primary btn-block" href="login.html">註冊</a>*@
