--- a/task03_0606/Views/Home/Restaurent.cshtml
+++ b/task03_0606/Views/Home/Restaurent.cshtml
@@ -156,7 +156,8 @@
         </div>
     </div>
 
-    <div class="col-xl-12 col-sm-12 mb-12">
+
+    @*<div class="col-xl-12 col-sm-12 mb-12">
         <div class="card-header">
             <i class="fa fa-table"></i> Data Table Example
         </div>
@@ -201,7 +202,7 @@
             </div>
         </div>
         <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-    </div>
+    </div>*@
 </div>
 
 
