--- a/task03_0606/Views/Shared/_Layout.cshtml
+++ b/task03_0606/Views/Shared/_Layout.cshtml
@@ -118,7 +118,7 @@
                             </div>*@
 
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item small" href="#">View all messages</a>
+                        <a class="dropdown-item small" href="~/Home/Order">詳細訂單明細</a>
                     </div>
                 </li>
 
