更正 產品分類主類及飲品類-連結問題

--- a/task03_0606/Views/Products/Index.cshtml
+++ b/task03_0606/Views/Products/Index.cshtml
@@ -16,7 +16,7 @@
                 <h5 class="card-title">飲品/湯品</h5>
                 <p class="card-text">多種不同風味飲品&湯品，讓您細細品嘗。</p>
                 <div>
-                    <a href="~/Views/Products/Aproducts.cshtml" class="btn btn-primary">進入挑選</a>
+                    <a href="~/Aproducts.html" class="btn btn-primary">進入挑選</a>
                 </div>
      
             </div>
