--- a/task03_0606/Views/Shared/_Layout.cshtml
+++ b/task03_0606/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-        <a class="navbar-brand" href="~/Home/index">美食廣場</a>
+        <h2><a class="navbar-brand" href="~/Home/index"><i class="fa fa-fw fa-delicious"></i>美食廣場</a></h2>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
