--- a/task03_0606/Views/_Member_LayoutPage1.cshtml
+++ b/task03_0606/Views/_Member_LayoutPage1.cshtml
@@ -11,7 +11,9 @@
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/jquery.twzipcode.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <script src="/js/yi.js"></script>
+
 </head>
 <body class="bg-dark">
     <div>
