設定頁面瀏覽權限

--- a/task03_0606/Views/Member/EditPersonalData.cshtml
+++ b/task03_0606/Views/Member/EditPersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     string LayoutUrl = "~/Views/_Normal_Member_Home_LayoutPage1.cshtml";
-    if((string)Session["identity"] == "superUser" || (string)Session["identity"] == "storeUser") {
+    if ((string)Session["identity"] == "superUser" || (string)Session["identity"] == "storeUser") {
         LayoutUrl = "~/Views/_Member_Home_LayoutPage1.cshtml";
     }
     ViewBag.Title = "EditPersonalData";
@@ -19,29 +19,37 @@
 
                         <div class="col-md-6">
                             <label for="LastName">姓氏</label>
-                            <input class="form-control" id="LastName" type="text" aria-describedby="nameHelp" placeholder="請輸入姓氏...">
+                            <input class="form-control" id="LastName" type="text" required="required" aria-describedby="nameHelp" placeholder="請輸入姓氏...">
                         </div>
                         <div class="col-md-6">
                             <label for="FirstName">名稱</label>
-                            <input class="form-control" id="FirstName" type="text" aria-describedby="nameHelp" placeholder="請輸入名稱...">
+                            <input class="form-control" id="FirstName" type="text" required="required" aria-describedby="nameHelp" placeholder="請輸入名稱...">
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
+                    <label for="uid">身分證字號</label>
+                    <input class="form-control" id="uid" type="text" maxlength="10" pattern="(^[A-Z]{1})([1-2]{1})([0-9]{8})" required="required" aria-describedby="emailHelp" placeholder="請輸入身分證字號，首字母大寫...">
+                </div>
+                <div class="form-group">
                     <label for="Email1">電子信箱</label>
-                    <input class="form-control" id="Email1" type="email" aria-describedby="emailHelp" placeholder="請輸入電子信箱...">
+                    <input class="form-control" id="Email1" type="email" required="required" aria-describedby="emailHelp" placeholder="請輸入電子信箱...">
                 </div>
                 <div class="form-group">
                     <div class="form-row">
                         <div class="col-md-6">
-                            <label for="Password1">新密碼</label>
-                            <input class="form-control" id="Password1" type="password" placeholder="請輸入密碼...">
+                            <label for="Password1">密碼</label>
+                            <input class="form-control" id="Password1" type="password" required="required" placeholder="請輸入密碼...">
                         </div>
                         <div class="col-md-6">
-                            <label for="ConfirmPassword">確認新密碼</label>
-                            <input class="form-control" id="ConfirmPassword" type="password" placeholder="確認密碼...">
+                            <label for="ConfirmPassword" id="ConfPwdLabel">確認密碼</label>
+                            <input class="form-control" id="ConfirmPassword" type="password" required="required" placeholder="確認密碼...">
                         </div>
                     </div>
+                </div>
+                <div class="form-group">
+                    <label for="cellPhone">手機號碼</label>
+                    <input class="form-control" id="cellPhone" type="tel" maxlength="10" pattern="([0]{1})([9]{1})(\d{8})" required aria-describedby="telHelp" placeholder="請輸入手機號碼...">
                 </div>
 
 
@@ -57,16 +65,57 @@
 
                 </div>
                 <div class="form-group">
-                    <input class="form-control" id="Address" type="text" placeholder="">
+                    <input class="form-control" id="Address" type="text" required="required" placeholder="">
                 </div>
 
                 @*<a class="btn btn-primary btn-block" href="login.html">註冊</a>*@
-                <button type="submit" class="btn btn-primary btn-block">修改</button>
+                <button type="submit" class="btn btn-primary btn-block">註冊</button>
             </form>
-            
+            <div class="text-center">
+                <a class="d-block small mt-3" href="/Member/Login">登入</a>
+                <a class="d-block small" href="/Member/ForgotPassword">忘記密碼?</a>
+            </div>
         </div>
     </div>
 </div>
+
+<!-- Logout Modal-->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">準備登出?</h5>
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">當你準備好離開時，按下"登出"按鍵登出。</div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">關閉</button>
+                <a class="btn btn-primary" href="~/Member/Logout">登出</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="/js/jquery.twzipcode.min.js"></script>
 <script src="/js/yi.js"></script>
+<script>
+    $(document).ready(function () {
+        //$("#ConfirmPassword").blur(function () {
+        //    alert("OK")
+        //})
 
+        $("#ConfirmPassword").blur(function () {
+            if ($("#Password1").val() != $("#ConfirmPassword").val()) {
+                $("#ConfPwdLabel").html('確認密碼 <i class="fa fa-times" style="color: red;"></i> 密碼不相符');
+                //$("#ConfirmPassword").tooltip("show");
+            }
+            if ($("#Password1").val() == $("#ConfirmPassword").val()) {
+                $("#ConfPwdLabel").html('確認密碼 <i class="fa fa-check" style="color: green;"></i>');
+                //$("#ConfirmPassword").tooltip("hide");
+            }
+
+        })
+    })
+</script>
