--- a/task03_0606/Views/_Member_SuperUser_LayoutPage1.cshtml
+++ b/task03_0606/Views/_Member_SuperUser_LayoutPage1.cshtml
@@ -53,7 +53,12 @@
                         <span class="nav-link-text">訂單表格</span>
                     </a>
                 </li>
-                
+                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
+                    <a class="nav-link" href="/Member/MemberTable">
+                        <i class="fa fa-fw fa-table"></i>
+                        <span class="nav-link-text">會員表格</span>
+                    </a>
+                </li>
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
                     <a class="nav-link" href="/Member/EditPersonalData">
                         <i class="fa fa-fw fa-pencil"></i>
