--- a/task03_0606/Views/Member/OrderTable.cshtml
+++ b/task03_0606/Views/Member/OrderTable.cshtml
@@ -49,9 +49,7 @@
                                 <td>麵</td>
                                 <td>3</td>
                                 <td>3</td>
-                                <td>
-                                    
-                                </td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <td>Tiger Nixon</td>
@@ -534,15 +532,15 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">準備登出?</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span>
                     </button>
                 </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+                <div class="modal-body">當你準備好離開時，按下"登出"按鍵登出。</div>
                 <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
+                    <button class="btn btn-secondary" type="button" data-dismiss="modal">關閉</button>
+                    <a class="btn btn-primary" href="~/Member/Logout">登出</a>
                 </div>
             </div>
         </div>
